// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckupTab render with deprecations 1`] = `
<Fragment>
  <EuiSpacer />
  <EuiText
    grow={false}
  >
    <p>
      <FormattedMessage
        defaultMessage="These {strongCheckupLabel} issues need your attention. Resolve them before upgrading to Elasticsearch {nextEsVersion}."
        id="xpack.upgradeAssistant.checkupTab.tabDetail"
        values={
          Object {
            "nextEsVersion": "9.x",
            "strongCheckupLabel": <strong>
              index
            </strong>,
          }
        }
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCallOut
    color="warning"
    iconType="help"
    title={
      <FormattedMessage
        defaultMessage="Back up your indices now"
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutTitle"
        values={Object {}}
      />
    }
  >
    <p>
      <FormattedMessage
        defaultMessage="Back up your data using the {snapshotRestoreDocsButton}."
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.calloutDetail"
        values={
          Object {
            "snapshotRestoreDocsButton": <EuiLink
              href="https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-snapshots.html"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="snapshot and restore APIs"
                id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.snapshotRestoreDocsButtonLabel"
                values={Object {}}
              />
            </EuiLink>,
          }
        }
      />
    </p>
  </EuiCallOut>
  <EuiSpacer />
  <EuiPageContent>
    <EuiPageContentBody>
      <CheckupControls
        allDeprecations={
          Array [
            Object {
              "details": "[[type: doc, field: spins], [type: doc, field: mlockall], [type: doc, field: node_master], [type: doc, field: primary]]",
              "index": ".monitoring-es-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: tweet, field: liked]]",
              "index": "twitter",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: index-pattern, field: notExpandable], [type: config, field: xPackMonitoring:allowReport], [type: config, field: xPackMonitoring:showBanner], [type: dashboard, field: pause], [type: dashboard, field: timeRestore]]",
              "index": ".kibana",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: doc, field: notify], [type: doc, field: created], [type: doc, field: attach_payload], [type: doc, field: met]]",
              "index": ".watcher-history-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: doc, field: snapshot]]",
              "index": ".monitoring-kibana-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: tweet, field: liked]]",
              "index": "twitter2",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2Ftwitter.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": "twitter",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "details": "Upgrading is irreversible, so always back up your index before proceeding.",
              "index": ".triggered_watches",
              "level": "critical",
              "message": "This index must be upgraded in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/migration-api-upgrade.html",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2F.reindex-status.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": ".reindex-status",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2Ftwitter2.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": "twitter2",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "details": "Upgrading is irreversible, so always back up your index before proceeding.",
              "index": ".watches",
              "level": "critical",
              "message": "This index must be upgraded in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/migration-api-upgrade.html",
            },
          ]
        }
        availableGroupByOptions={
          Array [
            "message",
            "index",
          ]
        }
        currentFilter="all"
        currentGroupBy="message"
        loadData={[MockFunction]}
        loadingState={1}
        onFilterChange={[Function]}
        onGroupByChange={[Function]}
        onSearchChange={[Function]}
      />
      <EuiSpacer />
      <GroupedDeprecations
        allDeprecations={
          Array [
            Object {
              "details": "[[type: doc, field: spins], [type: doc, field: mlockall], [type: doc, field: node_master], [type: doc, field: primary]]",
              "index": ".monitoring-es-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: tweet, field: liked]]",
              "index": "twitter",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: index-pattern, field: notExpandable], [type: config, field: xPackMonitoring:allowReport], [type: config, field: xPackMonitoring:showBanner], [type: dashboard, field: pause], [type: dashboard, field: timeRestore]]",
              "index": ".kibana",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: doc, field: notify], [type: doc, field: created], [type: doc, field: attach_payload], [type: doc, field: met]]",
              "index": ".watcher-history-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: doc, field: snapshot]]",
              "index": ".monitoring-kibana-6-2018.11.07",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "details": "[[type: tweet, field: liked]]",
              "index": "twitter2",
              "level": "warning",
              "message": "Coercion of boolean fields",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/6.0/breaking_60_mappings_changes.html#_coercion_of_boolean_fields",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2Ftwitter.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": "twitter",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "details": "Upgrading is irreversible, so always back up your index before proceeding.",
              "index": ".triggered_watches",
              "level": "critical",
              "message": "This index must be upgraded in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/migration-api-upgrade.html",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2F.reindex-status.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": ".reindex-status",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "actions": Array [
                Object {
                  "label": "Reindex in Console",
                  "url": "/app/dev_tools#/console?load_from=%2Fapi%2Fupgrade_assistant%2Freindex%2Fconsole_template%2Ftwitter2.json",
                },
              ],
              "details": "Reindexing is irreversible, so always back up your index before proceeding.",
              "index": "twitter2",
              "level": "critical",
              "message": "This index must be reindexed in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/reindex-upgrade.html",
            },
            Object {
              "details": "Upgrading is irreversible, so always back up your index before proceeding.",
              "index": ".watches",
              "level": "critical",
              "message": "This index must be upgraded in order to upgrade the Elastic Stack.",
              "url": "https://www.elastic.co/guide/en/elasticsearch/reference/current/migration-api-upgrade.html",
            },
          ]
        }
        currentFilter="all"
        currentGroupBy="message"
        search=""
      />
    </EuiPageContentBody>
  </EuiPageContent>
</Fragment>
`;

exports[`CheckupTab render with error 1`] = `
<Fragment>
  <EuiSpacer />
  <EuiText
    grow={false}
  >
    <p>
      <FormattedMessage
        defaultMessage="These {strongCheckupLabel} issues need your attention. Resolve them before upgrading to Elasticsearch {nextEsVersion}."
        id="xpack.upgradeAssistant.checkupTab.tabDetail"
        values={
          Object {
            "nextEsVersion": "9.x",
            "strongCheckupLabel": <strong>
              index
            </strong>,
          }
        }
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCallOut
    color="warning"
    iconType="help"
    title={
      <FormattedMessage
        defaultMessage="Back up your indices now"
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutTitle"
        values={Object {}}
      />
    }
  >
    <p>
      <FormattedMessage
        defaultMessage="Back up your data using the {snapshotRestoreDocsButton}."
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.calloutDetail"
        values={
          Object {
            "snapshotRestoreDocsButton": <EuiLink
              href="https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-snapshots.html"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="snapshot and restore APIs"
                id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.snapshotRestoreDocsButtonLabel"
                values={Object {}}
              />
            </EuiLink>,
          }
        }
      />
    </p>
  </EuiCallOut>
  <EuiSpacer />
  <EuiPageContent>
    <EuiPageContentBody>
      <LoadingErrorBanner
        loadingError={[Error: something bad!]}
      />
    </EuiPageContentBody>
  </EuiPageContent>
</Fragment>
`;

exports[`CheckupTab render without deprecations 1`] = `
<Fragment>
  <EuiSpacer />
  <EuiText
    grow={false}
  >
    <p>
      <FormattedMessage
        defaultMessage="These {strongCheckupLabel} issues need your attention. Resolve them before upgrading to Elasticsearch {nextEsVersion}."
        id="xpack.upgradeAssistant.checkupTab.tabDetail"
        values={
          Object {
            "nextEsVersion": "9.x",
            "strongCheckupLabel": <strong>
              index
            </strong>,
          }
        }
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCallOut
    color="warning"
    iconType="help"
    title={
      <FormattedMessage
        defaultMessage="Back up your indices now"
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutTitle"
        values={Object {}}
      />
    }
  >
    <p>
      <FormattedMessage
        defaultMessage="Back up your data using the {snapshotRestoreDocsButton}."
        id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.calloutDetail"
        values={
          Object {
            "snapshotRestoreDocsButton": <EuiLink
              href="https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-snapshots.html"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="snapshot and restore APIs"
                id="xpack.upgradeAssistant.checkupTab.backUpCallout.calloutBody.snapshotRestoreDocsButtonLabel"
                values={Object {}}
              />
            </EuiLink>,
          }
        }
      />
    </p>
  </EuiCallOut>
  <EuiSpacer />
  <EuiPageContent>
    <EuiPageContentBody>
      <EuiEmptyPrompt
        body={
          <React.Fragment>
            <p
              data-test-subj="upgradeAssistantIssueSummary"
            >
              <FormattedMessage
                defaultMessage="You have no {strongCheckupLabel} issues."
                id="xpack.upgradeAssistant.checkupTab.noIssues.noIssuesLabel"
                values={
                  Object {
                    "strongCheckupLabel": <strong>
                      index
                    </strong>,
                  }
                }
              />
            </p>
            <p>
              <FormattedMessage
                defaultMessage="Check the {overviewTabButton} for next steps."
                id="xpack.upgradeAssistant.checkupTab.noIssues.nextStepsDetail"
                values={
                  Object {
                    "overviewTabButton": <EuiLink
                      onClick={[Function]}
                    >
                      <FormattedMessage
                        defaultMessage="Overview tab"
                        id="xpack.upgradeAssistant.checkupTab.noIssues.nextStepsDetail.overviewTabButtonLabel"
                        values={Object {}}
                      />
                    </EuiLink>,
                  }
                }
              />
            </p>
          </React.Fragment>
        }
        iconType="faceHappy"
        title={
          <h2>
            <FormattedMessage
              defaultMessage="All clear!"
              id="xpack.upgradeAssistant.checkupTab.noIssues.noIssuesTitle"
              values={Object {}}
            />
          </h2>
        }
      />
    </EuiPageContentBody>
  </EuiPageContent>
</Fragment>
`;
